--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     font-family: monospace;
   }
   
-  #toy-header {
+  #app-header {
     display: flex;
     justify-content: center;
     background: #515DA2;
@@ -12,12 +12,12 @@ body {
     padding: 1rem;
   }
   
-  #toy-header img {
+  #app-header img {
     height: 6rem;
     width: auto;
   }
   
-  #toy-collection {
+  #contact-collection {
     margin: 2rem;
   }
   
@@ -29,10 +29,10 @@ body {
     height: 25rem;
     display: inline-grid;
     margin: 1rem 2rem;
-    box-shadow: 3px 4px #00a2ff
+    box-shadow: 3px 4px #e04b52
   }
   
-  .toy-avatar {
+  .contact-picture {
     justify-self: center;
     height: 12rem;
     width: auto;
@@ -40,20 +40,20 @@ body {
   
   button {
     position: relative;
-    background-color: #04ca2f;
+    background-color: #e04b52;
     border: none;
     border-radius: 5px;
     height: 3rem;
     width: max-content;
-    color: rgb(255, 255, 255);
+    color: whitesmoke;
     font-size: 18px;
     justify-self: center;
   }
   
   button:hover {
     background-color: whitesmoke;
-    border: #e04bc0 solid 1px;
-    color: #554be0;
+    border: #e04b52 solid 1px;
+    color: #e04b52;
   }
   
   .container {
@@ -61,17 +61,17 @@ body {
     width: stretch;
     height: auto;
     display: none;
-    background: #519da2;
+    background: #515DA2;
     opacity: .8;
   }
   
-  .add-toy-form {
+  .add-friend-form {
     width: 80%
   }
   
   .submit {
     position: relative;
-    background-color: #6b4be0;
+    background-color: #e04b52;
     border-radius: 5px;
     height: 2rem;
     width: max-content;
@@ -84,8 +84,8 @@ body {
   
   .submit:hover {
     background-color: whitesmoke;
-    border: #4b66e0 solid 1px;
-    color: #0011fd;
+    border: #e04b52 solid 1px;
+    color: #e04b52;
   }
   
   
